--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "intrigued-nachos",
-    "slug": "snack-e22cc3c8-1745-4a8d-95dd-96ca5c7b315e",
+    "name": "curious-raisins",
+    "slug": "snack-a9ae7362-a858-4ffb-8515-082ae6bc7b63",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
