--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "intrigued-nachos",
-    "slug": "snack-e22cc3c8-1745-4a8d-95dd-96ca5c7b315e",
+    "name": "nervous-ramen",
+    "slug": "snack-05230d7b-52a6-452f-8c72-9a260e331062",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
