--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "intrigued-nachos",
-    "slug": "snack-e22cc3c8-1745-4a8d-95dd-96ca5c7b315e",
+    "name": "blessed-apple",
+    "slug": "snack-8c2f3ffd-5e7a-41f9-b838-22f5c6628039",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
